Create OBSTACLE CLASS for ENEMY CLASS and ITEM CLASS to inherit from. Add Coin to game

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 
 <canvas id="background"  width="1500px" height="680px" ></canvas>
 <canvas id="gangsterCanvas"></canvas>
+
 <div id="health-bar-container">
     <div id="health-bar"></div>
 </div>
+
+
+<div id="score">1</div>
+
 <script src="animation.js" type = 'module'></script>
 <!--<script src="animation.js"></script>-->
 </body>
