FIX HORIZONTAL HOVER & ADD CHARACTER SELECT

--- a/PLAY_GAME.html
+++ b/PLAY_GAME.html
@@ -25,10 +25,12 @@
     <a href="index.html"><button id="main-menu-button">BACK TO MAIN MENU</button></a>
 </div>
 
+<div id="next-level-transition"  >NEXT LEVEL </div>
+<!--class="next-level-transition"-->
 
 
 
-<script src="animation.js" type = 'module'></script>
+<script src="scripts/animation.js" type = 'module'> </script>
 
 </body>
 </html>
