--- a/PLAY_GAME.html
+++ b/PLAY_GAME.html
@@ -19,11 +19,16 @@
 
 <div id="level-display">LEVEL 1</div>
 
+<button id="back" onclick="window.location.href='index.html'">BACK </button>
+
+
+
 <div id="dead-display-container">
     YOU DIE
     <button id="restart-button" onclick="window.location.reload()">RESTART</button>
     <a href="index.html"><button id="main-menu-button">BACK TO MAIN MENU</button></a>
 </div>
+
 
 <div id="next-level-transition"  >NEXT LEVEL </div>
 <!--class="next-level-transition"-->
