Shoot projectile from character 1 GUN.

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
      function inputPlayerName() {
         Swal.fire({
-            title: 'Enter your name',
+            title: 'ENTER GANGSTER NAME',
             input: 'text', // Type of input
-            inputLabel: 'Your name',
-            inputPlaceholder: 'Type your name here',
+            // inputLabel: 'MAFIA NAME',
+            inputPlaceholder: 'BIG BAD BOSS',
             // showCancelButton: true, // Show a cancel button
         }).then((result) => {
             if (result.isConfirmed) {
